--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>MiniParse Overlay</title>
-  <link rel="stylesheet" href="miniparse.css">
+  <link rel="stylesheet" href="miniparse.html">
   <script src="https://ngld.github.io/OverlayPlugin/assets/shared/common.min.js"></script>
 </head>
 </body>
