--- a/index.html
+++ b/index.html
@@ -2,8 +2,14 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>MiniParse Overlay</title>
-  <link rel="stylesheet" href="miniparse.html">
+  <title>Limit Break Info Tracker</title>
+  <link rel="stylesheet" href="limitbreak.css">
   <script src="https://ngld.github.io/OverlayPlugin/assets/shared/common.min.js"></script>
+  <script src="dpscatcher.js"></script>
 </head>
+<body class="resize-background">
+  <div id="container-limitbreak" class="bar"></div>
+  <div id="settings-container">
+    <div id="settings"></div>
+  </div>
 </body>
