--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Limit Break Info Tracker</title>
-  <link rel="stylesheet" href="limitbreak.css">
+  <link rel="stylesheet" href="MiniParse.html">
   <script src="https://ngld.github.io/OverlayPlugin/assets/shared/common.min.js"></script>
   <script src="dpscatcher.js"></script>
 </head>
