--- a/index.html
+++ b/index.html
@@ -367,4 +367,11 @@
     </table>
 
 </body>
+</head>
+<body class="resize-background">
+  <div id="container-limitbreak" class="bar"></div>
+  <div id="settings-container">
+    <div id="settings"></div>
+  </div>
+</body>
 </html>
