--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
         }
 
         #combatantTable {
+            margin: 0;
             width: 100%;
             table-layout: fixed;
             border-collapse: collapse;
