--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
 
         /* キャラクターデータのテキストの設定 */
         #combatantTableBody * {
+            margin: 0;
             color: #E2EBF5;
             text-shadow: -1px 0 3px #217AA2, 0 1px 3px #217AA2, 1px 0 3px #217AA2, 0 -1px 3px #217AA2;
             font-weight: 300;
