--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         // ヘッダの定義
         var headerDefine =
         [
-          //  { html: "<img src='Job{JobOrName}.png.png',width='15' height='15' />", width: "5%", align: "center" },
+            { text: " ", width: "0.1%" , align: "center" },
             { text: "Name", width: "0.6%", align: "left" },
             { text: "Job", width: "0.2%", align: "center" },
             { text: "DPS (%)", width: "0.4%", align: "center"},
@@ -125,7 +125,7 @@
         // 表示するデータの定義
         var bodyDefine =
         [
-            //{ text: rankingText, width: "5%", align: "center", effect: deadYatsuEffect },
+            { text: rankingText, width: "0.1%" , align: "center"},
             { text: "{name}", width: "0.7%"},
             { html: "<img src='jobicon/Job{Job}.png',width='20' height='20' />", width: "0.2%", align: "center" },
             { text: "{encdps}", width: "0.4%", align: "center" },
@@ -133,7 +133,7 @@
             { text: "{enchps}", width: "0.3%", align: "center" },
             { text: "{healed%}", width: "0.4%", align: "center" },
             { text: "{OverHealPct}", width: "0.2%", align: "center" },
-            { text: "{deaths}", width: "0.2%", align: "center" },
+            { text: "{deaths}", width: "0.2%", align: "center", effect: deadYatsuEffect },
         ];
 
         // 順位を表示する（text に関数を指定する例）
@@ -158,7 +158,7 @@
             // デス数を整数値に変換
             var deaths = parseInt(combatant["deaths"]);
             // デス数が 0 よりも大きいなら
-            if (deaths > 0) {
+            if (deaths > 1) {
                 // 赤くする
                 cell.style.color = "#FFA0A0";
                 cell.style.textShadow = "-1px 0 3px #802020, 0 1px 3px #802020, 1px 0 3px #802020, 0 -1px 3px #802020";
