--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
 
         #combatantTable {
             width: 100%;
+            height: 90%
             table-layout: fixed;
             border-collapse: collapse;
         }
