--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-<!DOCTYPE html>
-
 <html>
 <head>
     <meta charset="utf-8" />
@@ -21,7 +19,7 @@
         }
 
         html {
-            height: 90%;
+            height: 100%;
 
             /* 外枠 */
             /*border: 1px solid rgba(0,0,0,0.1);*/
@@ -46,7 +44,6 @@
 
         #combatantTable {
             width: 100%;
-            height: 90%
             table-layout: fixed;
             border-collapse: collapse;
         }
@@ -104,10 +101,10 @@
         //
 
         // エンカウント情報の定義
-        var encounterDefine = "{title} / Time: {duration} / DPS: {ENCDPS}";
+        var encounterDefine = "{title} / {CurrentZoneName} / Time: {duration} / DPS: {encdps}";
 
         // 上記のエンカウント情報を HTML として扱うなら true
-        var useHTMLEncounterDefine = false;
+        var useHTMLEncounterDefine = true;
 
         // ヘッダの定義
         var headerDefine =
@@ -121,13 +118,14 @@
             { text: "Healed(%)", width: "0.4%", align: "center"},
             { text: "OH", width: "0.2%", align: "center"},
             { text: "Dead", width: "0.2%", align: "center" },
+	    //{ text: "test", width: "0.2%", align: "center" },
         ];
 
         // 表示するデータの定義
         var bodyDefine =
         [
             { text: rankingText, width: "0.1%" , align: "center"},
-            { text: "{name}", width: "0.7%"},
+            { text: namereplace, width: "0.7%" },
             { html: "<img src='jobicon/Job{Job}.png',width='20' height='20' />", width: "0.2%", align: "center" },
             { text: "{encdps}", width: "0.4%", align: "center" },
             { text: "{damage%}", width: "0.4%", align: "center" },
@@ -135,6 +133,7 @@
             { text: "{healed%}", width: "0.4%", align: "center" },
             { text: "{OverHealPct}", width: "0.2%", align: "center" },
             { text: "{deaths}", width: "0.2%", align: "center", effect: deadYatsuEffect },
+	    //{ text: "test", width: "0.2%", align: "center" },
         ];
 
         // 順位を表示する（text に関数を指定する例）
@@ -164,6 +163,13 @@
                 cell.style.color = "#FFA0A0";
                 cell.style.textShadow = "-1px 0 3px #802020, 0 1px 3px #802020, 1px 0 3px #802020, 0 -1px 3px #802020";
             }
+        }
+
+        function namereplace(combatant, index) {
+            if (combatant["name"] === "YOU") {
+                combatant["name"] = combatant["name"].replace("YOU" , myname );
+            }
+            return combatant["name"];
         }
 
         //
@@ -199,6 +205,14 @@
             }
             updateCombatantList(data);
         }
+
+        //自キャラプレイヤーネームを購読
+        addOverlayListener('ChangePrimaryPlayer', (data) => {
+        myname = data.charName;
+        return myname;
+});
+     startOverlayEvents();
+
 
         // エンカウント情報を更新する
         function updateEncounter(data) {
