--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         //
 
         // エンカウント情報の定義
-        var encounterDefine = "{title} / {CurrentZoneName} / Time: {duration} / DPS: {encdps}";
+        var encounterDefine = "{CurrentZoneName} / {title} / Time: {duration} / PTDPS: {encdps}";
 
         // 上記のエンカウント情報を HTML として扱うなら true
         var useHTMLEncounterDefine = true;
