--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         [
             { text: " ", width: "0.1%" , align: "center" },
             { text: "Name", width: "0.6%", align: "left" },
-            { text: "Job", width: "0.2%", align: "center" },
+            { text: "Job", width: "0.2%", align: "left" },
             { text: "DPS (%)", width: "0.4%", align: "center"},
             { text: "damage(%)", width: "0.4%", align: "center"},
             { text: "HPS", width: "0.3%", align: "center" },
@@ -126,7 +126,7 @@
         [
             { text: rankingText, width: "0.1%" , align: "center"},
             { text: namereplace, width: "0.7%" },
-            { html: "<img src='jobicon/Job{Job}.png',width='20' height='20' />", width: "0.2%", align: "center" },
+            { html: "<img src='jobicon/Job{Job}.png',width='20' height='20' />", width: "0.2%", align: "left" },
             { text: "{encdps}", width: "0.4%", align: "center" },
             { text: "{damage%}", width: "0.4%", align: "center" },
             { text: "{enchps}", width: "0.3%", align: "center" },
